Delete product and site (#17)
